--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  js: ^0.6.3
+  js: ^0.6.7
 
 dev_dependencies:
-  build_runner: ">=1.6.2 <2.0.0"
-  build_web_compilers: ">=2.0.0 <3.0.0"
+  build_runner: ">=2.0.0 <3.0.0"
+  build_web_compilers: 4.0.10
